# NekoThreadPool

./: .gitignore  .nekorelease.json  CMakeLists.txt  readme.md
.github/workflows/: ci.yml  conan.yml  vcpkg.yml
cmake/: NekoThreadPoolConfig.cmake.in
include/neko/core/: threadPool.hpp
include/neko/thread/: neko.thread.cppm  threadPool.hpp
tests/: threadPool_module_test.cpp  threadPool_test.cpp  threadPool_test_simple.cpp
tests/conan/: CMakeLists.txt  conanfile.txt  test_package.cpp
tests/vcpkg/: CMakeLists.txt  test_package.cpp
